logo and inteface adjustments

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,8 +34,8 @@ es:
     yes: Sí
     no: No
     abstentions: Abstenciones
-    title_slogan: Bienvenido a tu parlamento online
-    title_subslogan: Entra sin pedir permiso
+    title_slogan: Bienvenido a tu 
+    title_subslogan: Parlamento en linea
     filter_bills: Proyectos de ley
     filter_congressmen: Parlamentarios
     discussion_agendas: Tablas de discusión
