author separators and bill files shown

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -130,11 +130,11 @@ es:
     less_recents: Menos reciente
     sort_time: Invertir orden temporal
     session: Sesión
-    modal_bulletin_number: Documentos boletín
+    modal_bulletin_number: Proyecto de Ley
     modal_reports: Informes
     modal_table_date: Fecha
     modal_table_paperwork: Trámite
-    modal_documents: Oficios
+    modal_documents: Documentos de Iniciativa
     modal_directives: Indicaciones
     modal_revision: Comparados
     vote: Votación
